--- a/package.json
+++ b/package.json
@@ -3,11 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.14.16",
+    "@mui/x-date-pickers": "^6.18.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "chart.js": "^4.3.2",
     "cra-template-pwa": "2.0.0",
+    "dayjs": "^1.11.10",
+    "formik": "^2.2.9",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "js-cookie": "^3.0.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^12.2.0",
+    "react-jvectormap": "^0.0.16",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sweetalert2": "^8.19.1",
+    "web-vitals": "^4.2.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
