--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,32 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "theme_color": "#1d37de",
+  "background_color": "#1d37de",
+  "display": "fullscreen",
+  "scope": "/",
+  "start_url": ".",
+  "name": "ELLA",
+  "short_name": "ELLA",
+  "description": "monitoring system",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/192chap.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/256chap.png",
+      "sizes": "256x256",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/384chap.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/512chap.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
