--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.16",
-    "@mui/x-date-pickers": "^6.18.0",
+    "@mui/x-date-pickers": "^7.26.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,9 +20,9 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^12.2.0",
     "react-jvectormap": "^0.0.16",
     "react-redux": "^8.0.5",
@@ -57,5 +57,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "@mui/x-date-pickers": {
+      "peerDependencies": {
+        "react": "^17.0.0 || ^18.0.0 || ^19.0.0"
+      }
+    }
   }
 }
