--- a/package.json
+++ b/package.json
@@ -63,5 +63,11 @@
         "react": "^17.0.0 || ^18.0.0 || ^19.0.0"
       }
     }
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.20.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.15.0"
   }
 }
